--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>NeutralGood</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" href="images/favicon.ico">
   </head>
   <body>
   </body>
