create basic divs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" href="images/favicon.ico">
   </head>
+
   <body>
+  <div class="top-container">
+    <h1>NeutralGood</h1>
+    <p>developer</p>
+  </div>
+
+  <div class="middle-container">
+  </div>
+
+  <div class="bottom-container">
+  </div>
+
   </body>
 </html>
