add some clipart for playing with positioning

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
   </head>
 
   <body>
+
   <div class="top-container">
+
+    <img src="images/cloud.png" alt="cloud-image">
+
     <h1>NeutralGood</h1>
     <p>developer</p>
+
+    <img src="images/cloud.png" alt="cloud-image">
+    <img src="images/mountain.png" alt="cloud-image">
   </div>
 
   <div class="middle-container">
