--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
   <div class="top-container">
 
-    <img src="images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
 
-    <h1>NeutralGood</h1>
+    <h1 class="top-header">NeutralGood</h1>
     <p>developer</p>
 
-    <img src="images/cloud.png" alt="cloud-image">
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
     <img src="images/mountain.png" alt="cloud-image">
   </div>
 
