change font families to learn embedding

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>NeutralGood</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
   </head>
 
   <body>
