--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
 
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
-    <h1 class="top-header">NeutralGood</h1>
-    <p>developer</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-    <img src="images/mountain.png" alt="cloud-image">
+    <img class="top-cloud" src="images/cloud1.png" alt="cloud-image">
+    <h1>NeutralGood</h1>
+    <h2>novice developer</h2>
+    <img class="bottom-cloud" src="images/cloud3.png" alt="cloud-image">
+    <img class="mountains" src="images/mountains.png" alt="mountain-image">
   </div>
 
   <div class="middle-container">
@@ -23,14 +23,14 @@
     <div class="profile">
       <img class="avatar" src="images/ava.jpg">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p>I am a creative currently learning web development.</p>
     </div>
     <hr>
 
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-img" src="images/information.webp" alt="">
+        <img class="skill-img" src="images/brain.png" alt="">
         <h3>Lorem & Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
@@ -47,14 +47,12 @@
       <h2>Get In Touch</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
       <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:neutralgood-dev@protonmail.com">CONTACT ME</a>
     </div>
   </div>
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://github.com/neutralgood/">Github</a>
     <p>© 2020 NeutralGood.</p>
   </div>
 
