--- a/index.html
+++ b/index.html
@@ -31,23 +31,27 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="skill-img" src="images/brain.png" alt="">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <h3>Technical</h3>
+        <p>Web Development</p>
+        <p>Python</p>
+        <p>Linux</p>
       </div>
 
       <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <img class="skill-img" src="images/prototype.png" alt="">
+        <h3>Non-Technical</h3>
+        <p>Illustration</p>
+        <p>Tattooing</p>
+        <p>Creative Solutions</p>
       </div>
     </div>
     <hr>
 
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="mailto:neutralgood-dev@protonmail.com">CONTACT ME</a>
+      <h3></h3>
+      <p>Feel free to contact for inquiries, ideas, or to simply say hello. :)</p>
+      <a class="btn" href="mailto:neutralgood-dev@protonmail.com">email</a>
     </div>
   </div>
 
